--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -24,14 +24,16 @@
     "ui5-tooling-transpile": "^0.2.0"
   },
   "dependencies": {
-    "@sap/approuter": "~12.0.3"
+    "@sap/approuter": "~12.0.3",
+    "ui5-cc-md": "^0.0.6"
   },
   "ui5": {
     "dependencies": [
       "ui5-middleware-simpleproxy",
       "ui5-middleware-livereload",
       "ui5-tooling-transpile",
-      "ui5-tooling-modules"
+      "ui5-tooling-modules",
+      "ui5-cc-md"
     ],
     "ui5linter": {
       "severity": {
